--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">News App</string>
+    <string name="search_for_news">Search for News...</string>
 </resources>
