--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">News App</string>
-    <string name="search_for_news">Search for News...</string>
+    <string name="app_name">News</string>
+    <string name="search_for_news">Search by Keyword…</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="breaking_news">Breaking News</string>
-    <string name="news_categories">News Categories</string>
+    <string name="CoronaNews_categories">COVID19 News</string>
     <string name="saved_news">Saved News</string>
     <string name="search_news">Search News</string>
     <string name="add_to_saved_articles">ADD to Saved Articles</string>
